# vspoetry

./: .gitignore  README.md  pyproject.toml
vspoetry/: __init__.py
