[tool.poetry]
name = "vspoetry"
version = "0.1.0"
description = "Automatically save the running poetry virtual environmment to your vscode settings.json"
authors = ["MattiooFR <dugue.mathieu@gmail.com>"]
keywords = ["vscode", "poetry"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MattiooFR/vspoetry"
repository = "https://github.com/MattiooFR/vspoetry"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
vspoetry = 'vspoetry:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
